test: check for create new discount link

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -17,3 +17,12 @@
     </ul>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-12">
+    <%= link_to "Create New Discount", new_merchant_bulk_discount_path(@merchant) %>
+  </div>
+</div>
+</div>
+
+</body>
