--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
   <div class="top-container">
     <h1>Little Esty Shop - Final</h1>
     <div class="container">
-      <% flash.each do |type, message| %>
-        <div class="alert alert-<%= type %>">
-          <%= message %>
-        </div>
-      <% end %>
+    <% flash.each do |key, message| %>
+      <div class="flash <%= key %>">
+        <%= message %>
+      </div>
+    <% end %>
     </div>
     <div class="container">
       <%= yield %>
