feat: add eit link to discount show page

--- a/app/views/bulk_discounts/show.html.erb
+++ b/app/views/bulk_discounts/show.html.erb
@@ -2,4 +2,6 @@
 <div>
   <p>Quantity Threshold: <%= @bulk_discount.quantity_threshold %></p>
   <p>Percentage Discount: <%= @bulk_discount.percentage_discount %>%</p>
+  <%= link_to "Edit Discount", edit_merchant_bulk_discount_path(@merchant, @bulk_discount) %>
 </div>
+
