--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -21,6 +21,14 @@
 
 <div class="row">
   <div class="col-12">
+    <div class="upcoming-holidays">
+      <h2>Upcoming Holidays</h2>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
     <%= link_to "Create New Discount", new_merchant_bulk_discount_path(@merchant) %>
   </div>
 </div>
